--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "1e538736-55f3-48b9-9351-72c3093a5444"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
